--- a/03-frontend/angular-ecommerce/src/app/app.component.html
+++ b/03-frontend/angular-ecommerce/src/app/app.component.html
@@ -3,7 +3,7 @@
   <!-- MENU SIDEBAR-->
   <aside class="menu-sidebar d-none d-lg-block">
     <div class="logo">
-      <a href="#">
+      <a routerLink="/products">
         <img src="assets/images/logo.png" alt="luv2shop" class="img-responsive">
       </a>
     </div>
@@ -19,13 +19,8 @@
         <div class="container-fluid">
           <div class="header-wrap">
             <app-search></app-search>
-            <div class="cart-area d-n">
-              <a href="shopping-detail.html">
-                <div class="total">19.22 <span> 2</span></div>
-                <i class="fa fa-shopping-cart"
-                   aria-hidden="true"></i>
-              </a>
-            </div>
+            <app-cart-status></app-cart-status>
+
           </div>
           <div class="account-wrap"></div>
         </div>
