--- a/03-frontend/angular-ecommerce/src/app/components/product-details/product-details.component.html
+++ b/03-frontend/angular-ecommerce/src/app/components/product-details/product-details.component.html
@@ -1,11 +1,11 @@
 <div class="detail-section">
   <div class="container-fluid">
 
-    <img src="{{product.imageUrl}}" class="detail-img">
+    <img src="{{ product.imageUrl }}" class="detail-img" alt="">
 
     <h3>{{ product.name }}</h3>
     <div class="price">{{product.unitPrice | currency:'USD'}}</div>
-    <a href="#" class="primary-btn"> Add to cart</a>
+    <button (click)="addToCart(product)" class="btn btn-primary btn-sm">Add to cart</button>
 
     <hr>
     <h4>Description</h4>
