--- a/03-frontend/angular-ecommerce/src/app/components/product-list/product-list-grid.component.html
+++ b/03-frontend/angular-ecommerce/src/app/components/product-list/product-list-grid.component.html
@@ -9,16 +9,18 @@
 
           <div class="product-box">
 
-            <a routerLink="/products/{{tempProduct.id}}">
-            <img src="{{tempProduct.imageUrl}}" class="img-responsive">
+            <a routerLink="/products/{{ tempProduct.id }}">
+              <img src="{{ tempProduct.imageUrl }}" class="img-responsive">
             </a>
 
+            <div>
             <a routerLink="/products/{{tempProduct.id}}">
             <h1>{{tempProduct.name}}</h1>
             </a>
+            </div>
 
             <div class="price"> {{tempProduct.unitPrice | currency:'USD'}}</div>
-            <a href="#" class="primary-btn">Add to cart</a>
+            <button (click)="addToCart(tempProduct)" class="btn btn-primary btn-sm">Add to cart</button>
           </div>
 
           <!-- If products list is empty than display message to user -->
@@ -29,8 +31,44 @@
 
         </div>
       </div>
+
+      <!-- begin footer -->
+      <div class="footer-pagination">
+        <div class="row">
+          <div class="col-md-6"></div>
+
+          <div class="col-md-6">
+            <div class="row">
+              <div class="col-md-9" style="padding-left: 30%">
+
+                <ngb-pagination [(page)]="thePageNumber"
+                                [pageSize]="thePageSize"
+                                [collectionSize]="theTotalElements"
+                                [maxSize]="5"
+                                [boundaryLinks] = "true"
+                                (pageChange)="listProducts()">
+
+                </ngb-pagination>
+              </div>
+
+              <div class="col-md-3 mt-2" style="text-align: right;">
+                <span class="mr-2">Page Size </span>
+
+                <select #myPageSelect (change)="updatePageSize(myPageSelect.value)">
+                  <option>2</option>
+                  <option selected="true">5</option>
+                  <option>10</option>
+                  <option>20</option>
+                  <option>50</option>
+                </select>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- end footer-->
+
     </div>
   </div>
-
-
 </div>
