--- a/03-frontend/angular-ecommerce/src/app/app.component.html
+++ b/03-frontend/angular-ecommerce/src/app/app.component.html
@@ -19,6 +19,9 @@
         <div class="container-fluid">
           <div class="header-wrap">
             <app-search></app-search>
+
+            <app-login-status></app-login-status>
+
             <app-cart-status></app-cart-status>
 
           </div>
